# igraph-toy

./: CMakeLists.txt  Makefile  main.cpp
cmake/Modules/: FindIGRAPH.cmake
